# Comments

./: .env.dev  Dockerfile  README.md  docker-compose.yml   pyproject.toml
comments/config/: asgi.py  settings.py  urls.py  wsgi.py
comments/src/profiles/: models.py
